--- a/src/scss/blocks/_body.scss
+++ b/src/scss/blocks/_body.scss
@@ -1,3 +1,20 @@
+body {
+
+  &::-webkit-scrollbar {
+    width: 7px;
+    height: 7px;
+  }
+
+  &::-webkit-scrollbar-track {
+    background-color: var(--bright-gray);
+  }
+
+  &::-webkit-scrollbar-thumb {
+    border-radius: var(--border-radius-xsmall);
+    background-color: var(--havelock-blue);
+  }
+}
+
 .body--blocked {
   overflow: hidden;
 }
