--- a/src/scss/blocks/_burger.scss
+++ b/src/scss/blocks/_burger.scss
@@ -3,63 +3,60 @@
   z-index: 10;
   outline: 0;
   border: none;
+  border-radius: var(--border-radius-xsmall);
   width: 40px;
   height: 30px;
   background: transparent;
-}
 
-.burger:focus {
-  outline: 0;
-}
+  &:focus {
+    outline: 2px solid var(--havelock-blue);
+  }
 
-.burger span:nth-child(2) {
-  position: absolute;
-  top: 14px;
-  left: 50%;
-  transform: translateX(-50%);
-  width: 30px;
-  height: 2px;
-  background-color: $white-color;
-  transition: width 0.3s linear;
+  & span {
+    position: absolute;
+    left: 50%;
+    height: 2px;
+    background-color: $white-color;
+    transform: translateX(-50%);
+  }
 }
 
 .burger span:nth-child(1) {
-  position: absolute;
   top: 8px;
-  left: 50%;
-  transform: translateX(-50%);
   width: 20px;
-  height: 2px;
-  background-color: $white-color;
   transition: top 0.3s 0.3s, transform 0.3s linear;
   transform-origin: 50% 50%;
 }
 
-.burger span:nth-child(3) {
-  position: absolute;
-  top: 20px;
-  left: 50%;
-  transform: translateX(-50%);
-  width: 20px;
-  height: 2px;
-  background-color: $white-color;
-  transition: top 0.3s 0.3s, transform 0.3s linear;
-  transform-origin: 50% 50%;
-}
-
-.menu--active .burger span:nth-child(2) {
-  width: 0;
+.burger span:nth-child(2) {
+  top: 14px;
+  width: 30px;
   transition: width 0.3s linear;
 }
 
-.menu--active .burger span:nth-child(1) {
-  top: 14px;
-  transform: translateX(-50%) rotate(-45deg);
-  transition: top 0.3s, transform 0.3s 0.3s linear;
+.burger span:nth-child(3) {
+  top: 20px;
+  width: 20px;
+  transition: top 0.3s 0.3s, transform 0.3s linear;
+  transform-origin: 50% 50%;
 }
 
-.menu--active .burger span:nth-child(3) {
-  top: 14px;
-  transform: translateX(-50%) rotate(45deg);
-  transition: top 0.3s, transform 0.3s 0.3s linear;
+.menu--active .burger {
+
+  & span:nth-child(1) {
+    top: 14px;
+    transform: translateX(-50%) rotate(-45deg);
+    transition: top 0.3s, transform 0.3s 0.3s linear;
+  }
+
+  & span:nth-child(2) {
+    width: 0;
+    transition: width 0.3s linear;
+  }
+
+  & span:nth-child(3) {
+    top: 14px;
+    transform: translateX(-50%) rotate(45deg);
+    transition: top 0.3s, transform 0.3s 0.3s linear;
+  }
 }
