--- a/src/scss/blocks/_select.scss
+++ b/src/scss/blocks/_select.scss
@@ -3,6 +3,7 @@
   width: 100%;
 
   &.is-open .select__head {
+    border: 1px solid rgba($bright-gray, 0.85);
     border-bottom-left-radius: 0;
     border-bottom-right-radius: 0;
     background-color: rgba($bright-gray, 0.85);
@@ -25,9 +26,10 @@
 
 .select__head {
   position: relative;
-  border: 1px solid rgba($bright-gray, 0.85);
+  border: 1px solid rgba($white-color, 0.85);
   border-radius: var(--border-radius-xsmall);
   padding: 12px 36px 12px 10px;
+  height: 48px;
   background-color: rgba($white-color, 0.85);
   transition: border-radius .2s var(--transition-main);
   cursor: pointer;
