--- a/app/css/style.css
+++ b/app/css/style.css
@@ -7,15 +7,15 @@
   font-style: normal;
 }
 @font-face {
-  font-family: "Lato-Regular";
-  src: url("../fonts/Lato-Regular.woff2") format("woff2"), url("../Lato-Regular.woff") format("woff");
+  font-family: "Lato-ExtraBold";
+  src: url("../fonts/Lato-ExtraBold.woff2") format("woff2"), url("../Lato-ExtraBold.woff") format("woff");
   font-weight: 400;
   font-display: swap;
   font-style: normal;
 }
 @font-face {
-  font-family: "Lato-ExtraBold";
-  src: url("../fonts/Lato-ExtraBold.woff2") format("woff2"), url("../Lato-ExtraBold.woff") format("woff");
+  font-family: "Lato-Regular";
+  src: url("../fonts/Lato-Regular.woff2") format("woff2"), url("../Lato-Regular.woff") format("woff");
   font-weight: 400;
   font-display: swap;
   font-style: normal;
@@ -366,8 +366,6 @@ body::-webkit-scrollbar-thumb {
 
 .file__input:focus + .file__label,
 .file__input:focus-visible + .file__label {
-  border: 2px solid var(--havelock-blue);
-  padding: 11px 9px;
   background-color: rgba(61, 64, 80, 0.85);
 }
 
@@ -385,13 +383,13 @@ body::-webkit-scrollbar-thumb {
   display: flex;
   justify-content: center;
   align-items: center;
-  border: 1px solid rgba(255, 255, 255, 0.85);
+  border: 2px solid var(--havelock-blue);
   border-radius: var(--border-radius-xsmall);
   padding: 12px 10px;
   width: 100%;
   height: 100%;
   background-color: rgba(255, 255, 255, 0.85);
-  transition: border 0.2s var(--transition-main), padding 0.2s var(--transition-main), background-color 0.2s var(--transition-main);
+  transition: background-color 0.2s var(--transition-main);
   cursor: pointer;
 }
 .file__label span {
