--- a/src/scss/blocks/_file.scss
+++ b/src/scss/blocks/_file.scss
@@ -1,14 +1,11 @@
 .file {
   overflow: hidden;
-
   width: 100%;
   height: 48px;
 }
 
 .file__input:focus + .file__label,
 .file__input:focus-visible + .file__label {
-  border: 2px solid var(--havelock-blue);
-  padding: 11px 9px;
   background-color: rgba($bright-gray, 0.85);
 }
 
@@ -26,13 +23,13 @@
   display: flex;
   justify-content: center;
   align-items: center;
-  border: 1px solid rgba($white-color, 0.85);
+  border: 2px solid var(--havelock-blue);
   border-radius: var(--border-radius-xsmall);
   padding: 12px 10px;
   width: 100%;
   height: 100%;
   background-color: rgba($white-color, 0.85);
-  transition: border .2s var(--transition-main), padding .2s var(--transition-main), background-color .2s var(--transition-main);
+  transition: background-color .2s var(--transition-main);
   cursor: pointer;
 
   & span {
